--- a/pom.xml
+++ b/pom.xml
@@ -114,10 +114,12 @@
 
 		</dependency>
 
-		<!--
-
-		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
-
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity6 -->
+		<dependency>
+    <groupId>org.thymeleaf.extras</groupId>
+    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+   
+</dependency>
 		<dependency>
 
 			<groupId>org.springframework.boot</groupId>
@@ -125,6 +127,14 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+  
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
 
 	</dependencies>
 
